..F....... [ZBX-20534] fixed popup layout for importing when horizontal scroll was not visible
* commit '0d4dccde82a4c55574582bf6198b61bf53d5d008':
  ..F....... [ZBX-20534] removed extra div
  ..F....... [ZBX-20534] added styled scrollbar; fixed text elipsis in left menu
  ..F....... [ZBX-20534] fixed popup layout for importing when horizontal scroll was not visible

(cherry picked from commit c2a5e96d0abebf2ccd0bc3050cc9351395c0d738)

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -6398,7 +6398,7 @@ z-select,
 
 .import-compare {
 	display: flex;
-	max-height: calc(100vh - 190px);
+	max-height: calc(100vh - 220px);
 
 	.toc {
 		flex: 20%;
@@ -6411,6 +6411,11 @@ z-select,
 		margin-left: 5px;
 		overflow: auto;
 		border: 1px dashed $form-border-color;
+	}
+
+	.toc,
+	.diff {
+		@extend %webkit-scrollbar;
 	}
 }
 
